--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "reverse-md5": "0.0.4",
     "vue": "^2.6.10",
     "vue-bootstrap-pagination": "^2.10.3",
+    "vue-pdf": "^4.0.7",
     "vue-router": "^3.0.6",
     "vue-sweetalert2": "^2.0.5"
   },
