--- a/web/package.json
+++ b/web/package.json
@@ -17,7 +17,8 @@
     "vue-bootstrap-pagination": "^2.10.3",
     "vue-pdf": "^4.0.7",
     "vue-router": "^3.0.6",
-    "vue-sweetalert2": "^2.0.5"
+    "vue-sweetalert2": "^2.0.5",
+    "vue-text-marquee": "^1.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.7.0",
